--- a/Source/OrderApp/OrderApp/OrderApp.csproj
+++ b/Source/OrderApp/OrderApp/OrderApp.csproj
@@ -140,13 +140,33 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\Api\CustomersController.cs" />
+    <Compile Include="Controllers\Api\ProductsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\ApplicationDbContext.cs" />
+    <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\OrderDetail.cs" />
+    <Compile Include="Models\OrderHeader.cs" />
+    <Compile Include="Models\Paging.cs" />
+    <Compile Include="Models\Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bootstrap 4.5.3\css\bootstrap-grid.css" />
+    <Content Include="Content\bootstrap 4.5.3\css\bootstrap-grid.min.css" />
+    <Content Include="Content\bootstrap 4.5.3\css\bootstrap-reboot.css" />
+    <Content Include="Content\bootstrap 4.5.3\css\bootstrap-reboot.min.css" />
+    <Content Include="Content\bootstrap 4.5.3\css\bootstrap.css" />
+    <Content Include="Content\bootstrap 4.5.3\css\bootstrap.min.css" />
+    <Content Include="Content\bootstrap 4.5.3\css\font-awesome.min.css" />
+    <Content Include="Content\bootstrap 4.5.3\fonts\fontawesome-webfont.svg" />
+    <Content Include="Content\bootstrap 4.5.3\js\bootstrap.bundle.js" />
+    <Content Include="Content\bootstrap 4.5.3\js\bootstrap.bundle.min.js" />
+    <Content Include="Content\bootstrap 4.5.3\js\bootstrap.js" />
+    <Content Include="Content\bootstrap 4.5.3\js\bootstrap.min.js" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -157,17 +177,39 @@
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Content\bootstrap 4.5.3\css\bootstrap-grid.css.map" />
+    <Content Include="Content\bootstrap 4.5.3\css\bootstrap-grid.min.css.map" />
+    <Content Include="Content\bootstrap 4.5.3\css\bootstrap-reboot.css.map" />
+    <Content Include="Content\bootstrap 4.5.3\css\bootstrap-reboot.min.css.map" />
+    <Content Include="Content\bootstrap 4.5.3\css\bootstrap.css.map" />
+    <Content Include="Content\bootstrap 4.5.3\css\bootstrap.min.css.map" />
+    <Content Include="Content\bootstrap 4.5.3\fonts\fontawesome-webfont.eot" />
+    <Content Include="Content\bootstrap 4.5.3\fonts\fontawesome-webfont.ttf" />
+    <Content Include="Content\bootstrap 4.5.3\fonts\fontawesome-webfont.woff" />
+    <Content Include="Content\bootstrap 4.5.3\fonts\fontawesome-webfont.woff2" />
+    <Content Include="Content\bootstrap 4.5.3\fonts\FontAwesome.otf" />
+    <Content Include="Content\bootstrap 4.5.3\js\bootstrap.bundle.js.map" />
+    <Content Include="Content\bootstrap 4.5.3\js\bootstrap.bundle.min.js.map" />
+    <Content Include="Content\bootstrap 4.5.3\js\bootstrap.js.map" />
+    <Content Include="Content\bootstrap 4.5.3\js\bootstrap.min.js.map" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
     <Content Include="Scripts\jquery-3.4.1.slim.js" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery-3.5.1\jquery-3.5.1.js" />
+    <Content Include="Scripts\jquery-3.5.1\jquery-3.5.1.min.js" />
+    <Content Include="Scripts\jquery-3.6.0\jquery-3.6.0.js" />
+    <Content Include="Scripts\jquery-3.6.0\jquery-3.6.0.min.js" />
+    <Content Include="Scripts\jquery-3.6.4\jquery-3.6.4.js" />
+    <Content Include="Scripts\jquery-3.6.4\jquery-3.6.4.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Scripts\popper.min.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -185,7 +227,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
