--- a/Source/OrderApp/OrderApp/OrderApp.csproj
+++ b/Source/OrderApp/OrderApp/OrderApp.csproj
@@ -168,6 +168,7 @@
     <Content Include="Content\bootstrap 4.5.3\css\bootstrap.min.css" />
     <Content Include="Content\bootstrap 4.5.3\css\font-awesome.min.css" />
     <Content Include="Content\bootstrap 4.5.3\fonts\fontawesome-webfont.svg" />
+    <Content Include="Content\bootstrap 4.5.3\js\bootstrap-datepicker.min.js" />
     <Content Include="Content\bootstrap 4.5.3\js\bootstrap.bundle.js" />
     <Content Include="Content\bootstrap 4.5.3\js\bootstrap.bundle.min.js" />
     <Content Include="Content\bootstrap 4.5.3\js\bootstrap.js" />
@@ -209,6 +210,7 @@
     <Content Include="Scripts\jquery-3.6.0\jquery-3.6.0.min.js" />
     <Content Include="Scripts\jquery-3.6.4\jquery-3.6.4.js" />
     <Content Include="Scripts\jquery-3.6.4\jquery-3.6.4.min.js" />
+    <Content Include="Scripts\jquery-ui.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
